Fix publication report never visible

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -470,14 +470,15 @@ body.checklist-visible {
   }
 }
 
-.checklist-toc-view {
+.checklist-toc-entry {
   .checklist-toggle-report-details, .checklist-toggle-report-details-show {
     display: block;
   }
   .checklist-report-details, .checklist-toggle-report-details-hide {
     display: none;
   }
-  .checklist-details-visible {
+  
+  &.checklist-details-visible {
     .checklist-toggle-report-details-show {
       display: none;
     }
